Chapter-1/main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_instance" "Instance_creation" {
  ami                         = "ami-0861f4e788f5069dd"
  instance_type               = "t2.micro"
  vpc_security_group_ids      = ["${aws_security_group.Demo-sg.id}"]
  associate_public_ip_address = true
  key_name = "AwsLogin"
  user_data                   = <<-EOF
#!/bin/bash
yum install -y httpd
echo "Hello World" > /var/www/html/index.html
systemctl start httpd
systemctl enable httpd
EOF

  tags = {
    Name = "MyFirstInstance"
  }


}

resource "aws_security_group" "Demo-sg" {
  name = "terraform-security-group"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
output "instance_ip_addr" {
  value = aws_instance.Instance_creation.public_ip
}
